<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlueStream</string>
    <string name="action_settings">Settings</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Screen Capture -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="user_cancelled">User denied screen sharing permission</string>
    <string name="btn_recorder">Record</string>
    <string name="btn_receiver">Receive</string>
    <string name="screen_capture_start">Start</string>
    <string name="screen_capture_stop">Stop</string>
    <string name="screen_capture_status">Status</string>
    <string name="screen_capture_record">Record</string>

    <!-- Device Profile -->
    <string name="device_profile">No Profile\n(Disconnected)</string>
    <string name="device_connect_all">Connect All</string>
    <string name="device_no_pairing">No Pairing</string>
    <string name="device_mac_address">Mac Address: \n00:00:00:00:00:00</string>
    <string name="device_connect">Connect</string>
    <string name="device_disconnect">Disconnect</string>

    <!-- Floating Action Bar Strings -->
    <string name="reset_connection">Reset</string>
    <string name="dismiss_popup">Close</string>

    <!-- NavDrawer Strings -->
    <string name="desc_list_item_icon">Item Icon</string>


    <!-- Nav Drawer Menu Titles -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Connections</item>
        <!--<item >Checkout</item>-->
        <!--<item >History</item>-->
        <item >Settings</item>
        <!--<item >Logout</item>-->
    </string-array>
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_search</item><!-- ic_people -->
        <!--<item>@drawable/ic_checkout</item>&lt;!&ndash; ic_photos &ndash;&gt;-->
        <!--<item>@drawable/ic_history</item>&lt;!&ndash; ic_communities &ndash;&gt;-->
        <item>@drawable/ic_settings</item><!-- ic_pages -->
        <!--<item>@drawable/ic_logout</item>&lt;!&ndash; ic_whats_hot &ndash;&gt;-->
    </array>

</resources>
