<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/customborder">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <Button
                android:id="@+id/button_record"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_capture_start"
                android:allowUndo="false" />

            <Button
                android:id="@+id/button_receive"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_capture_status" />
            <Button
                android:id="@+id/button_exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_connection" />
            <Button
                android:id="@+id/button_dismiss"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dismiss_popup" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
